--- a/API - NOAA.ipynb
+++ b/API - NOAA.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Next step: try collecting data from 1/1/2020-3/31/2025 !"
+    "# Next step: try collecting data from 1/1/2018-3/31/2025 !"
    ]
   },
   {
@@ -18,6 +18,15 @@
     "# Try from this url:\n",
     "url = 'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&stations=USW00013897&startDate=2020-01-01&endDate=2025-03-31&dataTypes=TMAX,TMIN,PRCP&units=standard&format=json'\n",
     "# If that doesn't work, work on looping through all the dates and requesting batches!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note to self: update README with the url and output path when I have those and start wrapping this one up!"
    ]
   },
   {
