--- a/webscraping_nws_past_3_days.ipynb
+++ b/webscraping_nws_past_3_days.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "22114aec-5681-4e5f-a244-1e4f6ab28d09",
    "metadata": {},
    "outputs": [
@@ -14,19 +14,10 @@
       "Starting loop\n",
       "\n",
       "Seconds left until next scrape: 0\n",
-      "Saved as 2025-04-03T17-57-33+00-00\n",
-      "Seconds left until next scrape: 85866"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 69\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     68\u001b[0m         t \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m60\u001b[39m\n\u001b[1;32m---> 69\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Saved as 2025-04-03T21-09-01+00-00\n",
+      "Seconds left until next scrape: 00000\n",
+      "Saved as 2025-04-04T21-04-26+00-00\n",
+      "Seconds left until next scrape: 85197"
      ]
     }
    ],
@@ -36,13 +27,13 @@
     "\n",
     "# This is set up to automatically run every day, 86400 seconds.\n",
     "\n",
+    "print('Starting imports')\n",
+    "\n",
     "#imports\n",
     "import requests\n",
     "from bs4 import BeautifulSoup as BS\n",
     "import pandas as pd\n",
     "import time\n",
-    "\n",
-    "print('Starting imports')\n",
     "\n",
     "URL = 'https://forecast.weather.gov/data/obhistory/KBNA.html'\n",
     "\n",
