--- a/webscraping_nws_past_3_days.ipynb
+++ b/webscraping_nws_past_3_days.ipynb
@@ -13,9 +13,9 @@
       "Starting imports\n",
       "Starting loop\n",
       "\n",
-      "Seconds left until next scrape: 0\n",
-      "Saved as 2025-04-10T19-43-56+00-00\n",
-      "Seconds left until next scrape: 76898"
+      "Seconds left until next scrape: 0       \n",
+      "Saved as 2025-04-11T20-02-27+00-00\n",
+      "Seconds left until next scrape: 82953       "
      ]
     }
    ],
@@ -32,6 +32,7 @@
     "from bs4 import BeautifulSoup as BS\n",
     "import pandas as pd\n",
     "import time\n",
+    "import re\n",
     "\n",
     "URL = 'https://forecast.weather.gov/data/obhistory/KBNA.html'\n",
     "\n",
@@ -43,7 +44,7 @@
     "\n",
     "while True:\n",
     "    t -= 1\n",
-    "    print(f\"\\rSeconds left until next scrape: {t}\", end=\"\")\n",
+    "    print(f\"\\rSeconds left until next scrape: {t}       \", end=\"\")\n",
     "    if t == 0 :\n",
     "        try :\n",
     "            response = requests.get(URL)\n",
@@ -51,7 +52,7 @@
     "                soup = BS(response.text)\n",
     "                report_day = soup.findAll('meta', attrs={'name' : 'DC.date.created'})[0]['content']\n",
     "                # the format looks like: report_day = '2025-04-01T05:22:13+00:00'\n",
-    "                df = pd.DataFrame(columns = ['year','month','day_of_month','time','temp','precip_1_h','precip_3_h','precip_6_h'])\n",
+    "                df = pd.DataFrame(columns = ['year','month','day_of_month','time','wind','temp','precip_1_h','precip_3_h','precip_6_h'])\n",
     "                i = 0\n",
     "                for row in soup.find('tbody').findAll('tr') :\n",
     "                    data = row.findAll('td')\n",
@@ -59,6 +60,7 @@
     "                    df.loc[i,'month'] = report_day[5:7]\n",
     "                    df.loc[i,'day_of_month'] = data[0].text\n",
     "                    df.loc[i,'time'] = data[1].text\n",
+    "                    df.loc[i,'wind'] = re.sub(r'\\s+', ' ', data[2].text.strip()) # strip out all white space in the beginning and end, and convert all multiple whitespaces (including \\n) to single.\n",
     "                    df.loc[i,'temp'] = data[6].text\n",
     "                    df.loc[i,'precip_1_h'] = data[15].text\n",
     "                    df.loc[i,'precip_3_h'] = data[16].text\n",
@@ -94,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824b5011-3231-47bc-8250-15e5e3496a27",
+   "id": "625ab66c-f913-4e32-91bc-660e0354dbae",
    "metadata": {},
    "outputs": [],
    "source": []
