--- a/api_noaa.ipynb
+++ b/api_noaa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,72 @@
    "outputs": [],
    "source": [
     "# Next step: try collecting data from 1/1/2018-3/31/2025 !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see what info is available for the daily reports:\n",
+    "url = 'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&stations=USW00013897&startDate=2025-04-05&endDate=2025-04-05&units=standard&format=json'\n",
+    "# &dataTypes=TMAX,TMIN,PRCP -- these are the relevent ones.  Snow might be interesting too..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"token\":api_key}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.get(url, headers = headers)\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "{'DATE': '2025-04-05', 'STATION': 'USW00013897', 'SNOW': '0.0', 'TMAX': '83', 'TAVG': '76', 'TMIN': '59', 'PRCP': '2.12', 'SNWD': '0.0'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(res))\n",
+    "print(res[0])"
    ]
   },
   {
@@ -55,49 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {\"token\":api_key}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(url, headers = headers)\n",
-    "print(r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "res = r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1917\n",
-      "{'DATE': '2020-01-01', 'STATION': 'USW00013897', 'TMAX': '52', 'TMIN': '33', 'PRCP': '0.00'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(res))\n",
-    "print(res[0])"
    ]
   },
   {
