--- a/active_dispatch_combine_and_process.ipynb
+++ b/active_dispatch_combine_and_process.ipynb
@@ -27,6 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "c0e22d58-285e-4355-8d55-3b51cdb4e650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = '../data/active_dispatch/'\n",
+    "output = '../data/active_dispatch.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "51e6c823-43ec-4ca1-86b6-39b09985f996",
    "metadata": {},
    "outputs": [],
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "af010e28-f812-43cd-85f2-6454ad7aebad",
    "metadata": {},
    "outputs": [],
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "76d2dc74-e9a6-44c4-bd11-8bf2682c3dc9",
    "metadata": {},
    "outputs": [
@@ -58,12 +69,12 @@
      "output_type": "stream",
      "text": [
       "starting...\n",
-      "processing file 2088 of 2088: 1744387021000.csv                  done!\n"
+      "processing file 2275 of 2275: 1744499341000.csv                  \n",
+      "done!\n"
      ]
     }
    ],
    "source": [
-    "folder = '../data/active_dispatch/'\n",
     "files = [f for f in os.listdir(folder)]\n",
     "\n",
     "print('starting...')\n",
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f0ae3a7f-9c69-4b88-9e35-5fbd6fbb31a2",
    "metadata": {},
    "outputs": [
@@ -93,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26184\n"
+      "27873\n"
      ]
     }
    ],
@@ -103,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ca045165-8b2f-4d07-bc3b-d50d787a937c",
    "metadata": {},
    "outputs": [
@@ -115,7 +126,7 @@
       "incident_type_name          0\n",
       "call_received_time          0\n",
       "location                    0\n",
-      "location_description    26184\n",
+      "location_description    27873\n",
       "city_name                   0\n",
       "last_updated                0\n",
       "dtype: int64\n"
@@ -130,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "45222d81-d894-440b-8ef0-02628ef16be5",
    "metadata": {},
    "outputs": [],
@@ -141,21 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "fe42963d-0bf5-4400-bae4-99f2bf5b1102",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#grouped_sum = df.groupby(['Category', 'Subcategory'])['Value'].sum()\n",
-    "#ad.groupby(['incident_type_code','incident_type_name','call_received_time','location',\n",
-    "#                             'location_description','city_name'])['last_updated'].max()\n",
     "ad = ad.groupby(['incident_type_code','incident_type_name','call_received_time',\n",
     "                 'location','city_name'])['last_updated'].max().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "da9c0303-7505-42e0-8e57-bb48e0b6e847",
    "metadata": {},
    "outputs": [],
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "7d6842d1-418e-494e-a9ac-4aebc80db4d8",
    "metadata": {},
    "outputs": [
@@ -202,7 +210,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>514</td>\n",
+       "      <td>549</td>\n",
        "      <td>70A</td>\n",
        "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743085667000</td>\n",
@@ -212,7 +220,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1145</td>\n",
+       "      <td>1239</td>\n",
        "      <td>71A</td>\n",
        "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743085918000</td>\n",
@@ -222,7 +230,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2260</td>\n",
+       "      <td>2434</td>\n",
        "      <td>83P</td>\n",
        "      <td>SHOTS FIRED</td>\n",
        "      <td>1743093178000</td>\n",
@@ -232,7 +240,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2223</td>\n",
+       "      <td>2394</td>\n",
        "      <td>71P</td>\n",
        "      <td>BURGLARY-NON-RESIDENCE BREAK-IN</td>\n",
        "      <td>1743094882000</td>\n",
@@ -242,7 +250,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>515</td>\n",
+       "      <td>550</td>\n",
        "      <td>70A</td>\n",
        "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743095110000</td>\n",
@@ -261,73 +269,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3012</th>\n",
-       "      <td>2221</td>\n",
+       "      <th>3218</th>\n",
+       "      <td>2392</td>\n",
        "      <td>71A</td>\n",
        "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
-       "      <td>1744384055000</td>\n",
-       "      <td>2606 EUGENIA AVE</td>\n",
-       "      <td>WOODBINE</td>\n",
-       "      <td>1744387021000</td>\n",
+       "      <td>1744496819000</td>\n",
+       "      <td>530 WOODYCREST AVE</td>\n",
+       "      <td>SOUTH</td>\n",
+       "      <td>1744497541000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3013</th>\n",
-       "      <td>2222</td>\n",
+       "      <th>3219</th>\n",
+       "      <td>2393</td>\n",
        "      <td>71A</td>\n",
        "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
-       "      <td>1744384891000</td>\n",
-       "      <td>3106 BELMONT BLVD</td>\n",
-       "      <td>BELMONT</td>\n",
-       "      <td>1744385220000</td>\n",
+       "      <td>1744497250000</td>\n",
+       "      <td>407 HART AVE</td>\n",
+       "      <td>EAST</td>\n",
+       "      <td>1744497541000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3014</th>\n",
-       "      <td>129</td>\n",
-       "      <td>53A</td>\n",
-       "      <td>ROBERRY/HOLD UP ALARM</td>\n",
-       "      <td>1744385291000</td>\n",
-       "      <td>800 FORT NEGLEY BLVD</td>\n",
-       "      <td>FORT NEGLEY</td>\n",
-       "      <td>1744386481000</td>\n",
+       "      <th>3220</th>\n",
+       "      <td>177</td>\n",
+       "      <td>53P</td>\n",
+       "      <td>HOLD UP ROBBERY IN PROGRESS</td>\n",
+       "      <td>1744497325000</td>\n",
+       "      <td>2034 WEST END AVE</td>\n",
+       "      <td>MIDTOWN</td>\n",
+       "      <td>1744498620000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3015</th>\n",
-       "      <td>988</td>\n",
+       "      <th>3221</th>\n",
+       "      <td>425</td>\n",
+       "      <td>57P</td>\n",
+       "      <td>FIGHT/ASSAULT</td>\n",
+       "      <td>1744498523000</td>\n",
+       "      <td>135 GALLATIN PIKE S</td>\n",
+       "      <td>MADISON</td>\n",
+       "      <td>1744499341000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3222</th>\n",
+       "      <td>1072</td>\n",
        "      <td>70A</td>\n",
        "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
-       "      <td>1744385848000</td>\n",
-       "      <td>2927 GLENMEADE DR</td>\n",
-       "      <td>INGLEWOOD</td>\n",
-       "      <td>1744387021000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3016</th>\n",
-       "      <td>989</td>\n",
-       "      <td>70A</td>\n",
-       "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
-       "      <td>1744386630000</td>\n",
-       "      <td>2418 BURCH ST</td>\n",
-       "      <td>NORTH</td>\n",
-       "      <td>1744387021000</td>\n",
+       "      <td>1744498811000</td>\n",
+       "      <td>4420 HARDING PL</td>\n",
+       "      <td>BELLE MEADE</td>\n",
+       "      <td>1744499341000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3017 rows × 7 columns</p>\n",
+       "<p>3223 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      index incident_type_code               incident_type_name  \\\n",
-       "0       514                70A         RESIDENCE-BURGLARY ALARM   \n",
-       "1      1145                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
-       "2      2260                83P                      SHOTS FIRED   \n",
-       "3      2223                71P  BURGLARY-NON-RESIDENCE BREAK-IN   \n",
-       "4       515                70A         RESIDENCE-BURGLARY ALARM   \n",
+       "0       549                70A         RESIDENCE-BURGLARY ALARM   \n",
+       "1      1239                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
+       "2      2434                83P                      SHOTS FIRED   \n",
+       "3      2394                71P  BURGLARY-NON-RESIDENCE BREAK-IN   \n",
+       "4       550                70A         RESIDENCE-BURGLARY ALARM   \n",
        "...     ...                ...                              ...   \n",
-       "3012   2221                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
-       "3013   2222                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
-       "3014    129                53A            ROBERRY/HOLD UP ALARM   \n",
-       "3015    988                70A         RESIDENCE-BURGLARY ALARM   \n",
-       "3016    989                70A         RESIDENCE-BURGLARY ALARM   \n",
+       "3218   2392                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
+       "3219   2393                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
+       "3220    177                53P      HOLD UP ROBBERY IN PROGRESS   \n",
+       "3221    425                57P                    FIGHT/ASSAULT   \n",
+       "3222   1072                70A         RESIDENCE-BURGLARY ALARM   \n",
        "\n",
        "      call_received_time                     location       city_name  \\\n",
        "0          1743085667000                719 MYRTLE ST            EAST   \n",
@@ -336,11 +344,11 @@
        "3          1743094882000               360 WALLACE RD   PARAGON MILLS   \n",
        "4          1743095110000  1236 BRENTWOOD HIGHLANDS DR  NIPPERS CORNER   \n",
        "...                  ...                          ...             ...   \n",
-       "3012       1744384055000             2606 EUGENIA AVE        WOODBINE   \n",
-       "3013       1744384891000            3106 BELMONT BLVD         BELMONT   \n",
-       "3014       1744385291000         800 FORT NEGLEY BLVD     FORT NEGLEY   \n",
-       "3015       1744385848000            2927 GLENMEADE DR       INGLEWOOD   \n",
-       "3016       1744386630000                2418 BURCH ST           NORTH   \n",
+       "3218       1744496819000           530 WOODYCREST AVE           SOUTH   \n",
+       "3219       1744497250000                 407 HART AVE            EAST   \n",
+       "3220       1744497325000            2034 WEST END AVE         MIDTOWN   \n",
+       "3221       1744498523000          135 GALLATIN PIKE S         MADISON   \n",
+       "3222       1744498811000              4420 HARDING PL     BELLE MEADE   \n",
        "\n",
        "       last_updated  \n",
        "0     1743103621000  \n",
@@ -349,16 +357,16 @@
        "3     1743110280000  \n",
        "4     1743103621000  \n",
        "...             ...  \n",
-       "3012  1744387021000  \n",
-       "3013  1744385220000  \n",
-       "3014  1744386481000  \n",
-       "3015  1744387021000  \n",
-       "3016  1744387021000  \n",
+       "3218  1744497541000  \n",
+       "3219  1744497541000  \n",
+       "3220  1744498620000  \n",
+       "3221  1744499341000  \n",
+       "3222  1744499341000  \n",
        "\n",
-       "[3017 rows x 7 columns]"
+       "[3223 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,6 +382,102 @@
    "source": [
     "### step 2 - calculate and format!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71bab410-1d65-40ae-9dd4-9d41c0595248",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a5c764a-6eba-4db0-a45b-d84ffd11b1c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62004850-0e71-4a52-8c14-3e2faf464440",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddfc0ca6-db1a-4ad9-aba8-2ebbd080d0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "663d6253-6157-4799-a71c-c51d56bf2fee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e4a59b-7433-45ab-8731-79fb4f5264fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429354e2-e63b-486c-94c2-6eaf217d6046",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb42ae91-4c95-4e06-9227-a10dc1f4df31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3748f86-f0f3-4adc-b5fd-5dcfb57fdb7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2859d293-37e0-4074-bd26-7d59c07369c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b666f61-eee6-46a4-9562-fb63fe8923be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bb7e92d-2343-44e9-b80a-51b58a85f5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -399,6 +503,7 @@
     "                                        'address', # -> location + \", NASHVILLE, TN\"\n",
     "                                        #\t(Estimated Resolution Time: ert)\n",
     "                                        #\tadd 240,000 to the UNIX time stamp of the last_updated time (4 minutes * 60 seconds * 1000 miliseconds)\n",
+    "                                        'ert_mins'       # estimated response time in minutes\n",
     "                                        'ert_date',\n",
     "                                        'ert_time',\n",
     "                                        'ert_display_month',\n",
