monday noon push

--- a/nws_3_day_webscrape.ipynb
+++ b/nws_3_day_webscrape.ipynb
@@ -15,7 +15,9 @@
       "\n",
       "Seconds left until next scrape: 0       \n",
       "Saved as 2025-04-12T19-00-50+00-00\n",
-      "Seconds left until next scrape: 70720       "
+      "Seconds left until next scrape: 0           \n",
+      "Saved as 2025-04-13T18-13-13+00-00\n",
+      "Seconds left until next scrape: 18156       "
      ]
     }
    ],
