--- a/weather_gov_combine_and_process.ipynb
+++ b/weather_gov_combine_and_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "id": "27d17fa3-4367-44e5-9d5f-f8b27e62cf48",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "id": "ed1f9c4c-aa4c-4d17-b717-78905377bc2f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "id": "264a0f1c-c009-4ec6-a8a9-7694c9d12905",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 8,
    "id": "38b6eccf-c0d6-4332-a49d-26657d168582",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "id": "d9c74928-93b7-43e7-9d5f-05ffcf195f42",
    "metadata": {},
    "outputs": [],
@@ -77,6 +77,7 @@
     "    'wind_direction': 'string',\n",
     "    'wind_speed': 'int',\n",
     "    'wind_gust': 'int',\n",
+    "    'wind_max': 'int',      # the max of wind_speed or wind_gust\n",
     "    'visibility_miles': 'float',\n",
     "    'weather': 'string',\n",
     "    'clouds': 'string',\n",
@@ -86,19 +87,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 42,
    "id": "ac861e15-3b65-4404-b0ef-b591abb585f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "wg = pd.DataFrame(columns = ['date','time','hr','temp','wind_direction',\n",
-    "                             'wind_speed','wind_gust','visibility_miles','weather','clouds','prcp_1_hr'])\n",
+    "                             'wind_speed','wind_gust','wind_max','visibility_miles','weather','clouds','prcp_1_hr'])\n",
     "wg = wg.astype(dtypes_on_save)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 44,
    "id": "9f9e6cce-b8f0-4f85-9d6a-2f1b750aef8f",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 46,
    "id": "0fe2b206-7685-44fa-bdf0-9bd1d505fca8",
    "metadata": {},
    "outputs": [
@@ -155,6 +156,9 @@
     "    next_df['wind_gust'] = next_df['wind_gust'].fillna('0')\n",
     "    # then change the dtype of the column\n",
     "    next_df['wind_gust'] = next_df['wind_gust'].astype(int)\n",
+    "\n",
+    "    # calculate the max_wind\n",
+    "    next_df['max_wind'] = next_df[['wind_gust', 'wind_speed']].max(axis=1)\n",
     "    \n",
     "    # convert T to 0.001\n",
     "    next_df = next_df.replace({'prcp_1_hr': {'T': '0.001', '':'0'}})\n",
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 47,
    "id": "2596638a-3bae-4a56-88e1-4ddcb55191d4",
    "metadata": {},
    "outputs": [],
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 48,
    "id": "b900f505-4ed8-4084-8958-4c06ffede507",
    "metadata": {},
    "outputs": [],
@@ -194,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 49,
    "id": "c77174d3-e5b5-44b7-ab91-44822e06aae7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wg = wg.groupby(['date','hr'])[['time','temp','wind_speed','wind_gust','visibility_miles','prcp_1_hr','wind_direction','weather','clouds']].max().reset_index()"
+    "wg = wg.groupby(['date','hr'])[['time','temp','wind_speed','wind_gust','max_wind','visibility_miles','prcp_1_hr','wind_direction','weather','clouds']].max().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 50,
    "id": "9312e530-7752-4c3c-a306-93d5d57ba954",
    "metadata": {},
    "outputs": [],
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 51,
    "id": "56be2c78-9d49-4ed9-a0ca-b5772847b1c0",
    "metadata": {},
    "outputs": [
@@ -228,6 +232,7 @@
       "temp                0\n",
       "wind_speed          0\n",
       "wind_gust           0\n",
+      "max_wind            0\n",
       "visibility_miles    0\n",
       "prcp_1_hr           0\n",
       "wind_direction      0\n",
@@ -244,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 58,
    "id": "1cd1717a-ffa3-46cd-9f08-ba67ba2eb467",
    "metadata": {},
    "outputs": [],
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 60,
    "id": "fbe1942a-7e09-4c5a-ab63-67d7a8bd05a0",
    "metadata": {},
    "outputs": [
@@ -285,6 +290,7 @@
        "      <th>temp</th>\n",
        "      <th>wind_speed</th>\n",
        "      <th>wind_gust</th>\n",
+       "      <th>max_wind</th>\n",
        "      <th>visibility_miles</th>\n",
        "      <th>prcp_1_hr</th>\n",
        "      <th>wind_direction</th>\n",
@@ -301,6 +307,7 @@
        "      <td>74.0</td>\n",
        "      <td>12</td>\n",
        "      <td>18</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>-500.0</td>\n",
        "      <td>0.06</td>\n",
        "      <td>WSW</td>\n",
@@ -315,6 +322,7 @@
        "      <td>43.0</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>-500.0</td>\n",
        "      <td>0.00</td>\n",
        "      <td>N</td>\n",
@@ -326,16 +334,20 @@
        "</div>"
       ],
       "text/plain": [
-       "             date  hr   time  temp  wind_speed  wind_gust  visibility_miles  \\\n",
-       "4263   2018-06-28  13  13:53  74.0          12         18            -500.0   \n",
-       "26196  2020-12-30  23  23:53  43.0          17          0            -500.0   \n",
+       "             date  hr   time  temp  wind_speed  wind_gust  max_wind  \\\n",
+       "4263   2018-06-28  13  13:53  74.0          12         18      18.0   \n",
+       "26196  2020-12-30  23  23:53  43.0          17          0      17.0   \n",
        "\n",
-       "       prcp_1_hr wind_direction weather                clouds  \n",
-       "4263        0.06            WSW          SCT013 BKN020 OVC029  \n",
-       "26196       0.00              N                BKN008 OVC024   "
+       "       visibility_miles  prcp_1_hr wind_direction weather  \\\n",
+       "4263             -500.0       0.06            WSW           \n",
+       "26196            -500.0       0.00              N           \n",
+       "\n",
+       "                     clouds  \n",
+       "4263   SCT013 BKN020 OVC029  \n",
+       "26196        BKN008 OVC024   "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 62,
    "id": "ac696eb5-90e0-482e-b513-1159472ff839",
    "metadata": {},
    "outputs": [
@@ -377,6 +389,7 @@
        "      <th>temp</th>\n",
        "      <th>wind_speed</th>\n",
        "      <th>wind_gust</th>\n",
+       "      <th>max_wind</th>\n",
        "      <th>visibility_miles</th>\n",
        "      <th>prcp_1_hr</th>\n",
        "      <th>wind_direction</th>\n",
@@ -393,6 +406,7 @@
        "      <td>78.0</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>0.001</td>\n",
        "      <td>S</td>\n",
@@ -407,6 +421,7 @@
        "      <td>78.0</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>0.001</td>\n",
        "      <td>WSW</td>\n",
@@ -421,6 +436,7 @@
        "      <td>74.0</td>\n",
        "      <td>12</td>\n",
        "      <td>18</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>-500.0</td>\n",
        "      <td>0.060</td>\n",
        "      <td>WSW</td>\n",
@@ -436,6 +452,7 @@
        "      <td>10</td>\n",
        "      <td>0</td>\n",
        "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>0.140</td>\n",
        "      <td>SSW</td>\n",
        "      <td>Lt rain, Mist</td>\n",
@@ -449,6 +466,7 @@
        "      <td>73.0</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>0.000</td>\n",
        "      <td>W</td>\n",
@@ -460,22 +478,29 @@
        "</div>"
       ],
       "text/plain": [
-       "            date  hr   time  temp  wind_speed  wind_gust  visibility_miles  \\\n",
-       "4261  2018-06-28  11  11:53  78.0          13          0              10.0   \n",
-       "4262  2018-06-28  12  12:53  78.0           6          0              10.0   \n",
-       "4263  2018-06-28  13  13:53  74.0          12         18            -500.0   \n",
-       "4264  2018-06-28  14  14:53  73.0          10          0              10.0   \n",
-       "4265  2018-06-28  15  15:53  73.0           5          0              10.0   \n",
+       "            date  hr   time  temp  wind_speed  wind_gust  max_wind  \\\n",
+       "4261  2018-06-28  11  11:53  78.0          13          0      13.0   \n",
+       "4262  2018-06-28  12  12:53  78.0           6          0       6.0   \n",
+       "4263  2018-06-28  13  13:53  74.0          12         18      18.0   \n",
+       "4264  2018-06-28  14  14:53  73.0          10          0      10.0   \n",
+       "4265  2018-06-28  15  15:53  73.0           5          0       5.0   \n",
        "\n",
-       "      prcp_1_hr wind_direction        weather                clouds  \n",
-       "4261      0.001              S        Thunder  SCT009 BKN021 OVC026  \n",
-       "4262      0.001            WSW        Thunder              OVC021    \n",
-       "4263      0.060            WSW                 SCT013 BKN020 OVC029  \n",
-       "4264      0.140            SSW  Lt rain, Mist        SCT040 OVC100   \n",
-       "4265      0.000              W                 FEW040 BKN120 BKN170  "
+       "      visibility_miles  prcp_1_hr wind_direction        weather  \\\n",
+       "4261              10.0      0.001              S        Thunder   \n",
+       "4262              10.0      0.001            WSW        Thunder   \n",
+       "4263            -500.0      0.060            WSW                  \n",
+       "4264              10.0      0.140            SSW  Lt rain, Mist   \n",
+       "4265              10.0      0.000              W                  \n",
+       "\n",
+       "                    clouds  \n",
+       "4261  SCT009 BKN021 OVC026  \n",
+       "4262              OVC021    \n",
+       "4263  SCT013 BKN020 OVC029  \n",
+       "4264        SCT040 OVC100   \n",
+       "4265  FEW040 BKN120 BKN170  "
       ]
      },
-     "execution_count": 173,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 64,
    "id": "10146663-5b74-4267-b264-db3bef5a0e12",
    "metadata": {},
    "outputs": [
@@ -518,6 +543,7 @@
        "      <th>temp</th>\n",
        "      <th>wind_speed</th>\n",
        "      <th>wind_gust</th>\n",
+       "      <th>max_wind</th>\n",
        "      <th>visibility_miles</th>\n",
        "      <th>prcp_1_hr</th>\n",
        "      <th>wind_direction</th>\n",
@@ -534,6 +560,7 @@
        "      <td>47.0</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>N</td>\n",
@@ -548,6 +575,7 @@
        "      <td>45.0</td>\n",
        "      <td>13</td>\n",
        "      <td>0</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NE</td>\n",
@@ -562,6 +590,7 @@
        "      <td>43.0</td>\n",
        "      <td>17</td>\n",
        "      <td>0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>-500.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>N</td>\n",
@@ -576,6 +605,7 @@
        "      <td>41.0</td>\n",
        "      <td>9</td>\n",
        "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>N</td>\n",
@@ -590,6 +620,7 @@
        "      <td>39.0</td>\n",
        "      <td>6</td>\n",
        "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>N</td>\n",
@@ -601,22 +632,29 @@
        "</div>"
       ],
       "text/plain": [
-       "             date  hr   time  temp  wind_speed  wind_gust  visibility_miles  \\\n",
-       "26194  2020-12-30  21  21:53  47.0          17          0               4.0   \n",
-       "26195  2020-12-30  22  22:53  45.0          13          0               7.0   \n",
-       "26196  2020-12-30  23  23:53  43.0          17          0            -500.0   \n",
-       "26197  2020-12-31  01  01:53  41.0           9          0               5.0   \n",
-       "26198  2020-12-31  02  02:53  39.0           6          0               5.0   \n",
+       "             date  hr   time  temp  wind_speed  wind_gust  max_wind  \\\n",
+       "26194  2020-12-30  21  21:53  47.0          17          0      17.0   \n",
+       "26195  2020-12-30  22  22:53  45.0          13          0      13.0   \n",
+       "26196  2020-12-30  23  23:53  43.0          17          0      17.0   \n",
+       "26197  2020-12-31  01  01:53  41.0           9          0       9.0   \n",
+       "26198  2020-12-31  02  02:53  39.0           6          0       6.0   \n",
        "\n",
-       "       prcp_1_hr wind_direction        weather          clouds  \n",
-       "26194        0.0              N  Lt rain, Mist        OVC012    \n",
-       "26195        0.0             NE                       OVC007    \n",
-       "26196        0.0              N                 BKN008 OVC024   \n",
-       "26197        0.0              N  Lt rain, Mist                  \n",
-       "26198        0.0              N  Lt rain, Mist  BKN006 OVC025   "
+       "       visibility_miles  prcp_1_hr wind_direction        weather  \\\n",
+       "26194               4.0        0.0              N  Lt rain, Mist   \n",
+       "26195               7.0        0.0             NE                  \n",
+       "26196            -500.0        0.0              N                  \n",
+       "26197               5.0        0.0              N  Lt rain, Mist   \n",
+       "26198               5.0        0.0              N  Lt rain, Mist   \n",
+       "\n",
+       "               clouds  \n",
+       "26194        OVC012    \n",
+       "26195        OVC007    \n",
+       "26196  BKN008 OVC024   \n",
+       "26197                  \n",
+       "26198  BKN006 OVC025   "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 66,
    "id": "e48ac2a0-723d-4a1c-a1d3-a6e8eba1f31b",
    "metadata": {},
    "outputs": [],
@@ -639,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 68,
    "id": "dead49aa-bb57-456d-851f-37ea7d0c6e39",
    "metadata": {},
    "outputs": [],
@@ -649,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 70,
    "id": "56fa77d9-6661-4384-96cf-c042ce2ff481",
    "metadata": {},
    "outputs": [],
