--- a/active_dispatch_json_extract.ipynb
+++ b/active_dispatch_json_extract.ipynb
@@ -13,7 +13,11 @@
       "Starting imports\n",
       "Starting loop\n",
       "\n",
-      "Processed: 50.  Seconds until next process: 97     "
+      "Processed: 416.  Seconds until next process: 1      \n",
+      "Error!  Requests error : HTTPSConnectionPool(host='services2.arcgis.com', port=443): Max retries exceeded with url: /HdTo6HJqh92wn4D8/arcgis/rest/services/Metro_Nashville_Police_Department_Active_Dispatch_Table_view/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x000001DCFEC68DA0>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))\n",
+      "Processed: 416.  Seconds until next process: 1     \n",
+      "Error!  Requests error : HTTPSConnectionPool(host='services2.arcgis.com', port=443): Max retries exceeded with url: /HdTo6HJqh92wn4D8/arcgis/rest/services/Metro_Nashville_Police_Department_Active_Dispatch_Table_view/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x000001DCFEC68B60>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))\n",
+      "Processed: 508.  Seconds until next process: 248    "
      ]
     }
    ],
